Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/Static_Code_Analysis_Result__c.object-meta.xml
<CustomObject>
    <description>This object stores the results of Static Code Analysis executed through Copado.</description>
    <label>Static Code Analysis Result</label>
    <nameField>
        <displayFormat>SCA-{00000}</displayFormat>
        <label>Static Code Analysis Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Static Code Analysis Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>