Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <label>Closed</label>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>