Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Code_Smells__c.field-meta.xml
<CustomField>
    <fullName>Code_Smells__c</fullName>
    <description>Number of Code Smell violations</description>
    <label>Code Smells</label>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Type__c</field>
        <operation>equals</operation>
        <value>Code Smell</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved, Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>