Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <label>Confirmed</label>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>