Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Critical__c.field-meta.xml
<CustomField>
    <fullName>Critical__c</fullName>
    <description>Number of Critical violations</description>
    <label>Critical</label>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Severity__c</field>
        <operation>equals</operation>
        <value>Critical</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved, Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>