Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Deployment_Step__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Step</label>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Static Code Analysis Results</relationshipLabel>
    <relationshipName>Static_Code_Analysis_Results</relationshipName>
    <type>Lookup</type>
</CustomField>