Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/False_Positive__c.field-meta.xml
<CustomField>
    <fullName>False_Positive__c</fullName>
    <label>False Positive</label>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
        <operation>equals</operation>
        <value>False Positive</value>
    </summaryFilterItems>
    <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>