Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Highest_Priority_Violation__c.field-meta.xml
<CustomField>
    <fullName>Highest_Priority_Violation__c</fullName>
    <label>Highest Priority Violation</label>
    <summarizedField>Static_Code_Analysis_Violation__c.Priority__c</summarizedField>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved, Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>