Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Number_of_Violations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Violations__c</fullName>
    <description>Overall number of rule violations.</description>
    <label>Number of Violations</label>
    <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>