Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Org_Credential__c.field-meta.xml
<CustomField>
    <fullName>Org_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Static Code Analysis Results</relationshipLabel>
    <relationshipName>Static_Code_Analysis_Results</relationshipName>
    <type>Lookup</type>
</CustomField>