Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Score_v11__c.field-meta.xml
<CustomField>
    <fullName>Score_v11__c</fullName>
    <description>New v11 version of the Score field.</description>
    <label>Score</label>
    <summarizedField>Static_Code_Analysis_Violation__c.Score__c</summarizedField>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved, Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>