Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Unresolved__c.field-meta.xml
<CustomField>
    <fullName>Unresolved__c</fullName>
    <label>Unresolved</label>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
        <operation>notEqual</operation>
        <value>Fixed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
        <operation>notEqual</operation>
        <value>False Positive</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
        <operation>notEqual</operation>
        <value>Won&apos;t fix</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
        <operation>notEqual</operation>
        <value>Removed</value>
    </summaryFilterItems>
    <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>