Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Static Code Analysis Results</relationshipLabel>
    <relationshipName>Static_Code_Analysis_Results</relationshipName>
    <type>Lookup</type>
</CustomField>