Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Vulnerabilities__c.field-meta.xml
<CustomField>
    <fullName>Vulnerabilities__c</fullName>
    <description>CodeScan Vulnerability violations</description>
    <label>Vulnerabilities</label>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Type__c</field>
        <operation>equals</operation>
        <value>Vulnerability</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved, Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>