Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/fields/Wont_fix__c.field-meta.xml
<CustomField>
    <fullName>Wont_fix__c</fullName>
    <label>Won&apos;t fix</label>
    <summaryFilterItems>
        <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
        <operation>equals</operation>
        <value>Won&apos;t fix</value>
    </summaryFilterItems>
    <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>