Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Result__c/recordTypes/PMD.recordType-meta.xml
<RecordType>
    <fullName>PMD</fullName>
    <active>true</active>
    <description>Record Type for free of charge PMD integration</description>
    <label>PMD</label>
</RecordType>